Make the SVG parser interpret `form feed` as whitespace

https://bugs.webkit.org/show_bug.cgi?id=77755
rdar://problem/95488677

Reviewed by Anne van Kesteren.

This patch is to align WebKit with Chromium / Blink, Gecko / Firefox and Web Specification [1]:

[1] https://lists.w3.org/Archives/Public/public-svg-wg/2014AprJun/0068.html

This patch uses 'isASCIIWhite' across SVG Parser and code base to enable it to handle 'form feed'.

It is inspired by following change in Blink, which enables 'leading' and 'trailing' whitespace
in SVG Attributes [2]:

[2] https://src.chromium.org/viewvc/blink?view=revision&revision=175785

Credits to Jacob Goldstein  <jacobg@adobe.com> for 'test case'.

* Source/WebCore/svg/SVGParserUtilities.cpp:
(parseGlyphName):
* Source/WebCore/svg/SVGParserUtilities.h:
(isSVGSpace): Deleted
(isSVGSpaceOrComma): Updated
(skipOptionalSVGSpaces):
(skipOptionalSVGSpacesOrDelimiter): Both templates
* Source/WebCore/svg/SVGStringList.cpp:
(SVGStringList::parse):
* LayoutTests/svg/transforms/svg-formFeed-as-whitespace.html: Add Test Case
* LayoutTests/svg/transforms/svg-formFeed-as-whitespace-expected.html: Add Test Case Expectation
* LayoutTests/svg/transforms/svg-line-tabulation-as-not-whitespace.html: Add Test Case
* LayoutTests/svg/transforms/svg-line-tabulation-as-not-whitespace-expected.html: Add Test Case Expectation

Canonical link: https://commits.webkit.org/273353@main