Source/WebCore/svg/SVGParserUtilities.cpp
@@ -2,7 +2,7 @@
  * Copyright (C) 2002, 2003 The Karbon Developers
  * Copyright (C) 2006 Alexander Kellett <lypanov@kde.org>
  * Copyright (C) 2006, 2007 Rob Buis <buis@kde.org>
- * Copyright (C) 2007-2018 Apple Inc. All rights reserved.
+ * Copyright (C) 2007-2024 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -278,7 +278,7 @@ std::optional<HashSet<String>> parseGlyphName(StringView string)
 
             // walk backwards from the ; to ignore any whitespace
             auto inputEnd = buffer.position() - 1;
-            while (inputStart < inputEnd && isSVGSpace(*inputEnd))
+            while (inputStart < inputEnd && isASCIIWhitespace(*inputEnd))
                 --inputEnd;
 
             values.add(String(inputStart, inputEnd - inputStart + 1));
