Source/WebCore/svg/SVGParserUtilities.h
@@ -1,7 +1,7 @@
 /*
  * Copyright (C) 2002, 2003 The Karbon Developers
  * Copyright (C) 2006, 2007 Rob Buis <buis@kde.org>
- * Copyright (C) 2013 Apple Inc. All rights reserved.
+ * Copyright (C) 2013-2024 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -55,34 +55,26 @@ std::optional<FloatPoint> parseFloatPoint(StringParsingBuffer<UChar>&);
 std::optional<std::pair<UnicodeRanges, HashSet<String>>> parseKerningUnicodeString(StringView);
 std::optional<HashSet<String>> parseGlyphName(StringView);
 
-
-// SVG allows several different whitespace characters:
-// http://www.w3.org/TR/SVG/paths.html#PathDataBNF
-template<typename CharacterType> constexpr bool isSVGSpace(CharacterType c)
-{
-    return c == ' ' || c == '\t' || c == '\n' || c == '\r';
-}
-
 template<typename CharacterType> constexpr bool isSVGSpaceOrComma(CharacterType c)
 {
-    return isSVGSpace(c) || c == ',';
+    return isASCIIWhitespace(c) || c == ',';
 }
 
 template<typename CharacterType> constexpr bool skipOptionalSVGSpaces(const CharacterType*& ptr, const CharacterType* end)
 {
-    skipWhile<isSVGSpace>(ptr, end);
+    skipWhile<isASCIIWhitespace>(ptr, end);
     return ptr < end;
 }
 
 template<typename CharacterType> constexpr bool skipOptionalSVGSpaces(StringParsingBuffer<CharacterType>& characters)
 {
-    skipWhile<isSVGSpace>(characters);
+    skipWhile<isASCIIWhitespace>(characters);
     return characters.hasCharactersRemaining();
 }
 
 template<typename CharacterType> constexpr bool skipOptionalSVGSpacesOrDelimiter(const CharacterType*& ptr, const CharacterType* end, char delimiter = ',')
 {
-    if (ptr < end && !isSVGSpace(*ptr) && *ptr != delimiter)
+    if (ptr < end && !isASCIIWhitespace(*ptr) && *ptr != delimiter)
         return false;
     if (skipOptionalSVGSpaces(ptr, end)) {
         if (ptr < end && *ptr == delimiter) {
@@ -98,7 +90,7 @@ template<typename CharacterType> constexpr bool skipOptionalSVGSpacesOrDelimiter
     if (!characters.hasCharactersRemaining())
         return false;
 
-    if (!isSVGSpace(*characters) && *characters != delimiter)
+    if (!isASCIIWhitespace(*characters) && *characters != delimiter)
         return false;
 
     // There are only spaces in the remaining characters.
